[package]
name = "jwt_getter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jwt_getter_lib"
path = "src/lib.rs"

[dependencies]
env_logger = "0.10.0"
jwt-simple = "0.11.5"
log = "0.4.19"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"]}
serde = "1.0.163"